Make the db work

--- a/csharp/PizzaApi/appsettings.json
+++ b/csharp/PizzaApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "PizzaDb": "Pizza.db"
+    "PizzaDb": "Data Source=Pizza.db;"
   },
   "AllowedHosts": "*"
 }
